add docker config to discovery service